# facial_emotion_detection

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/resources/: face_emotion-0.1.2-py3-none-any.whl
docker/: Dockerfile  app.py  build.sh  run.sh
docs/: Fer+_Results.csv
face_emotion/data/: data_aug.py  dataset.py
face_emotion/io/: json.py
face_emotion/models/: models.py
notebooks/: data_analysis.ipynb  plot_train_loss.ipynb
scripts/: 1_train.py  common.py  consts.py  eval.py  run.sh  run_test.sh  run_train.sh  train.py
