[tool.poetry]
name = "face-emotion"
version = "0.1.2"
description = "Face emotion recognition based on FER+."
authors = ["Gustavo Zanoni <gzf1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
tensorflow = "^2.16.1"
albumentations = "^1.4.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
